force-app/main/default/objects/Lead/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <label>Additional Details</label>
    <inlineHelpText>Free-text notes the prospect entered on the website intake form (additional_details).</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>