force-app/main/default/objects/Lead/fields/Bad_Number__c.field-meta.xml
<CustomField>
    <fullName>Bad_Number__c</fullName>
    <label>Bad Number</label>
    <inlineHelpText>TRUE when the phone is bad/wrong (disposition). Suppresses SMS via SMS_Eligible__c.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>