force-app/main/default/objects/Lead/fields/Capital_Required__c.field-meta.xml
<CustomField>
    <fullName>Capital_Required__c</fullName>
    <label>Capital Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>