force-app/main/default/objects/Lead/fields/Close_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Close_Lead_Id__c</fullName>
    <label>Close Lead ID</label>
    <inlineHelpText>External ID from Close CRM. The migration upserts on this (re-runnable, no duplicates) and it traces each Salesforce lead back to its Close record.</inlineHelpText>
    <externalId>true</externalId>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>