force-app/main/default/objects/Lead/fields/Consent_Language_Version__c.field-meta.xml
<CustomField>
    <fullName>Consent_Language_Version__c</fullName>
    <label>Consent Language Version</label>
    <inlineHelpText>Version identifier of the SMS/marketing consent language the lead agreed to on the website intake form (consent_language_version). Paired with SMS Consent + SMS Consent Timestamp for TCPA documentation.</inlineHelpText>
    <length>100</length>
    <type>Text</type>
</CustomField>