force-app/main/default/objects/Lead/fields/Current_Drip__c.field-meta.xml
<CustomField>
    <fullName>Current_Drip__c</fullName>
    <label>Current Drip</label>
    <inlineHelpText>Marketing Cloud journey-entry signal. Set by the Lead marketing orchestrator on status/disposition change. Paired with Drip_Entered_At__c.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Speed-to-Lead</fullName>
            </value>
            <value>
                <fullName>Persistence</fullName>
            </value>
            <value>
                <fullName>Warm-Support</fullName>
            </value>
            <value>
                <fullName>Drive-to-Appointment</fullName>
            </value>
            <value>
                <fullName>Confirm-Remind</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Win-Back</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>