force-app/main/default/objects/Lead/fields/Disposition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Notes__c</fullName>
    <label>Disposition Notes</label>
    <type>TextArea</type>
</CustomField>