force-app/main/default/objects/Lead/fields/Drip_Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Drip_Entered_At__c</fullName>
    <label>Drip Entered At</label>
    <inlineHelpText>When the current drip was entered. Marketing Cloud keys journey entry off Current_Drip__c + this timestamp.</inlineHelpText>
    <type>DateTime</type>
</CustomField>