force-app/main/default/objects/Lead/fields/File_ID__c.field-meta.xml
<CustomField>
    <fullName>File_ID__c</fullName>
    <label>File ID</label>
    <inlineHelpText>Batch / provenance ID for the load this lead came in on (e.g. KLV-2025-08). Set by the data load; traces a lead to its source batch.</inlineHelpText>
    <length>30</length>
    <type>Text</type>
</CustomField>