force-app/main/default/objects/Lead/fields/Global_DNC__c.field-meta.xml
<CustomField>
    <fullName>Global_DNC__c</fullName>
    <label>Global DNC</label>
    <inlineHelpText>Global Do-Not-Contact. Set TRUE on a Do Not Call disposition. Makes Marketing_Eligible__c false.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>