force-app/main/default/objects/Lead/fields/Last_Engagement_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_At__c</fullName>
    <label>Last Engagement At</label>
    <inlineHelpText>Timestamp of the most recent inbound engagement (written back by record_engagement).</inlineHelpText>
    <type>DateTime</type>
</CustomField>