force-app/main/default/objects/Lead/fields/Last_Engagement_Detail__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Detail__c</fullName>
    <label>Last Engagement Detail</label>
    <inlineHelpText>Optional context for the most recent engagement (e.g. the SMS reply text, the form name, the link clicked). Written back by Marketing Cloud / the send channel.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>