force-app/main/default/objects/Lead/fields/Last_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Type__c</fullName>
    <label>Last Engagement Type</label>
    <inlineHelpText>Most recent inbound engagement, written back by the send channel via record_engagement.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS Reply</fullName>
            </value>
            <value>
                <fullName>Email Click</fullName>
            </value>
            <value>
                <fullName>Email Open</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Form Submit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>