force-app/main/default/objects/Lead/fields/Lead_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Batch_ID__c</fullName>
    <label>Lead Batch ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>