force-app/main/default/objects/Lead/fields/Lead_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reference_Number__c</fullName>
    <label>Lead Reference Number</label>
    <formula>CASE(TEXT(Lead_Vendor__c),
  "AEM", "AEM",
  "Klover", "KLV",
  "Mike's Leads", "MIKE",
  "Other", "OTH",
  "UNK")
&amp; "_" &amp;
CASE(TEXT(Lead_Vendor_Type__c),
  "AP", "AP",
  "Packs", "PK",
  "Legal", "LG",
  "Inbound Lead", "IN",
  "Dialer", "DL",
  "Digiapps", "DA",
  "Webform", "WF",
  "Lexicon", "LX",
  "NA")
&amp; "_" &amp;
TEXT(YEAR(DATEVALUE(CreatedDate)))
&amp; RIGHT("0" &amp; TEXT(MONTH(DATEVALUE(CreatedDate))), 2)
&amp; RIGHT("0" &amp; TEXT(DAY(DATEVALUE(CreatedDate))), 2)
&amp; "_" &amp;
RIGHT(Id, 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>