force-app/main/default/objects/Lead/fields/Lead_Source_Tag__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Tag__c</fullName>
    <label>Lead Source Tag</label>
    <inlineHelpText>Raw source tag from Close (e.g. Klover, Mike Leads, BFS Tampa). Free-text provenance from the source system.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>