force-app/main/default/objects/Lead/fields/Lead_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Vendor__c</fullName>
    <label>Lead Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Klover</fullName>
            </value>
            <value>
                <fullName>Mike's Leads</fullName>
            </value>
            <value>
                <fullName>AEM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>