force-app/main/default/objects/Lead/fields/Lead_Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Vendor_Type__c</fullName>
    <label>Lead Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Vendor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>Packs</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Inbound Lead</fullName>
            </value>
            <value>
                <fullName>Dialer</fullName>
            </value>
            <value>
                <fullName>Digiapps</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
            <value>
                <fullName>Lexicon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>