force-app/main/default/objects/Lead/fields/Link_to_Summons__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Summons__c</fullName>
    <label>Link to Summons</label>
    <type>Url</type>
</CustomField>