force-app/main/default/objects/Lead/fields/Local_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Local_Timezone__c</fullName>
    <label>Local Timezone</label>
    <inlineHelpText>Recipient local timezone for quiet-hours enforcement (8am-9pm). Derived from area code/state (derivation TODO).</inlineHelpText>
    <type>Text</type>
    <length>60</length>
</CustomField>