force-app/main/default/objects/Lead/fields/Marketing_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Eligible__c</fullName>
    <label>Marketing Eligible</label>
    <inlineHelpText>TRUE when TCPA-Clear AND not SMS-opted-out AND not global DNC. Master marketing gate.</inlineHelpText>
    <formula>ISPICKVAL(TCPA_Scrub_Status__c, &quot;Clear&quot;) &amp;&amp; NOT(SMS_Opt_Out__c) &amp;&amp; NOT(Global_DNC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>