force-app/main/default/objects/Lead/fields/Monthly_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue_Range__c</fullName>
    <label>Monthly Revenue Range</label>
    <inlineHelpText>Monthly gross revenue bucket captured on the website intake form (business_email/monthly_revenue). Range, not an exact figure — the exact figure lives on Monthly Revenue.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under $10K</fullName>
            </value>
            <value>
                <fullName>$10K-$25K</fullName>
            </value>
            <value>
                <fullName>$25K-$50K</fullName>
            </value>
            <value>
                <fullName>$50K-$100K</fullName>
            </value>
            <value>
                <fullName>$100K-$250K</fullName>
            </value>
            <value>
                <fullName>$250K+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>