force-app/main/default/objects/Lead/fields/Needs_Language_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Needs_Language_Reassignment__c</fullName>
    <label>Needs Language Reassignment</label>
    <inlineHelpText>TRUE on a Language Barrier disposition — route to a matching-language rep + language-appropriate drip.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>