force-app/main/default/objects/Lead/fields/Outbound_SMS_Number__c.field-meta.xml
<CustomField>
    <fullName>Outbound_SMS_Number__c</fullName>
    <label>Outbound SMS Number</label>
    <inlineHelpText>Resolved outbound SMS sender number (E.164) stamped by the switchable-sender resolver — the lead owner's rep number (PerRep mode) or the dedicated marketing number (Dedicated mode). Read by Marketing Cloud journeys / KloudiService at send time.</inlineHelpText>
    <length>40</length>
    <type>Text</type>
</CustomField>