force-app/main/default/objects/Lead/fields/Payment_3__c.field-meta.xml
<CustomField>
    <fullName>Payment_3__c</fullName>
    <label>Payment 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>