force-app/main/default/objects/Lead/fields/Plaintiff_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Counsel__c</fullName>
    <label>Plaintiff Counsel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>