force-app/main/default/objects/Lead/fields/Reply_Received__c.field-meta.xml
<CustomField>
    <fullName>Reply_Received__c</fullName>
    <label>Reply Received</label>
    <inlineHelpText>TRUE once the lead has replied/engaged inbound at least once.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>