force-app/main/default/objects/Lead/fields/SMS_Consent__c.field-meta.xml
<CustomField>
    <fullName>SMS_Consent__c</fullName>
    <label>SMS Consent</label>
    <inlineHelpText>Documented prior express written consent for SMS.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>