force-app/main/default/objects/Lead/fields/SMS_Consent_Source__c.field-meta.xml
<CustomField>
    <fullName>SMS_Consent_Source__c</fullName>
    <label>SMS Consent Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>