force-app/main/default/objects/Lead/fields/SMS_Consent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SMS_Consent_Timestamp__c</fullName>
    <label>SMS Consent Timestamp</label>
    <type>DateTime</type>
</CustomField>