force-app/main/default/objects/Lead/fields/SMS_Eligible__c.field-meta.xml
<CustomField>
    <fullName>SMS_Eligible__c</fullName>
    <label>SMS Eligible</label>
    <inlineHelpText>TRUE when Marketing_Eligible__c AND SMS consent given AND not a bad number.</inlineHelpText>
    <formula>Marketing_Eligible__c &amp;&amp; SMS_Consent__c &amp;&amp; NOT(Bad_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>