force-app/main/default/objects/Lead/fields/SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out__c</fullName>
    <label>SMS Opt Out</label>
    <inlineHelpText>Set TRUE on an inbound STOP reply; every marketing send must check this and suppress if TRUE.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>