force-app/main/default/objects/Lead/fields/SMS_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out_Date__c</fullName>
    <label>SMS Opt-Out Date</label>
    <inlineHelpText>When SMS_Opt_Out__c was set true. Stamped automatically the moment opt-out flips true, by any means (inbound STOP, manual, Marketing Cloud sync).</inlineHelpText>
    <type>DateTime</type>
</CustomField>