force-app/main/default/objects/Lead/fields/SMS_Opt_Out_Source__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out_Source__c</fullName>
    <label>SMS Opt-Out Source</label>
    <inlineHelpText>How the opt-out was captured. Non-restricted so Marketing Cloud's inbound-STOP sync can write its own source label; falls back to System when not specified.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound STOP</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>