force-app/main/default/objects/Lead/fields/Speed_to_Lead_At__c.field-meta.xml
<CustomField>
    <fullName>Speed_to_Lead_At__c</fullName>
    <label>Speed to Lead At</label>
    <inlineHelpText>Timestamp the lead flipped to Assigned (Speed-to-Lead moment). For response-time reporting.</inlineHelpText>
    <type>DateTime</type>
</CustomField>