force-app/main/default/objects/Lead/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <inlineHelpText>Restricted PII. Encrypted, masked to show only the last 4.</inlineHelpText>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>