force-app/main/default/objects/Lead/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax ID</label>
    <inlineHelpText>Restricted PII. Encrypted, masked to show only the last 4.</inlineHelpText>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>