force-app/main/default/objects/Lead/fields/TCPA_Scrub_Status__c.field-meta.xml
<CustomField>
    <fullName>TCPA_Scrub_Status__c</fullName>
    <label>TCPA Scrub Status</label>
    <inlineHelpText>Entry gate for marketing journeys; scrub automation deferred, set manually for now.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>