force-app/main/default/objects/Lead/fields/Time_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Business__c</fullName>
    <label>Time in Business</label>
    <inlineHelpText>Time in business in years (migration casts from Close free text). If your source is too inconsistent to cast, this can be switched to Text.</inlineHelpText>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>