force-app/main/default/objects/Lead/fields/Total_MCA_Debt_Range__c.field-meta.xml
<CustomField>
    <fullName>Total_MCA_Debt_Range__c</fullName>
    <label>Total MCA Debt Range</label>
    <inlineHelpText>Total existing MCA/advance debt bucket captured on the website intake form (total_mca_debt). Range, not an exact figure — the exact figure lives on Debt Amount.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Under $25K</fullName>
            </value>
            <value>
                <fullName>$25K-$50K</fullName>
            </value>
            <value>
                <fullName>$50K-$100K</fullName>
            </value>
            <value>
                <fullName>$100K-$250K</fullName>
            </value>
            <value>
                <fullName>$250K-$500K</fullName>
            </value>
            <value>
                <fullName>$500K+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>