force-app/main/default/objects/Lead/fields/Total_Positions__c.field-meta.xml
<CustomField>
    <fullName>Total_Positions__c</fullName>
    <label>Total Positions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>