force-app/main/default/objects/Lead/fields/Website_Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Website_Submitted_At__c</fullName>
    <label>Website Submitted At</label>
    <inlineHelpText>Timestamp the lead submitted the website intake form (submitted_at). Distinct from Created Date, which is when Salesforce received the record.</inlineHelpText>
    <type>DateTime</type>
</CustomField>