force-app/main/default/objects/Lead/fields/Win_Back_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Win_Back_Eligible__c</fullName>
    <label>Win-Back Eligible</label>
    <inlineHelpText>TRUE when disqualified via a soft disposition (Not Interested) — eligible for a later low-frequency win-back after a cool-off.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>