force-app/main/default/objects/Lead/listViews/New_York_All_Leads.listView-meta.xml
<ListView>
    <fullName>New_York_All_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Office__c</columns>
    <columns>Lead_Vendor__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>HFS_NY</value>
    </filters>
    <label>New York – All Leads</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>