force-app/main/default/objects/Lead/listViews/Qualified_Leads_Mine.listView-meta.xml
<ListView>
    <fullName>Qualified_Leads_Mine</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Office__c</columns>
    <columns>Lead_Vendor__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Qualified</value>
    </filters>
    <label>Qualified Leads (Mine)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>